# cli-chat

./: README.md  client.py  lint.sh  pyproject.toml  server.py
cli_chat/: client.py  consts.py  helpers.py  server.py
